SigmaCodebackup3rdSep/objects/Reminder_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>After__c</fullName>
        <defaultValue>true</defaultValue>
        <label>After</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Before__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reminder_value__c</fullName>
        <label>Reminder value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Reminder Setting</label>
</CustomObject>